--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,6 @@
   <packaging>pom</packaging>
   <modules>
   	<module>contract-service</module>
+  	<module>transaction-service</module>
   </modules>
 </project>
