--- a/transaction-service/src/main/resources/application.yml
+++ b/transaction-service/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: transaction-service
 server:
-  port: ${PORT:8090}
+  port: ${PORT:8091}
 web3j:
   client-address: http://192.168.99.100:8545
+  
+contract-service:
+  url: http://localhost:8090/contract/owner
