enable auto-update

--- a/transaction-service/pom.xml
+++ b/transaction-service/pom.xml
@@ -10,7 +10,7 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
 	</properties>
 
 	<dependencies>
