--- a/contract-service/pom.xml
+++ b/contract-service/pom.xml
@@ -4,16 +4,15 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.3.RELEASE</version>
+		<groupId>pl.piomin.services</groupId>
+		<artifactId>sample-spring-blockchain-contract</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>contract-services</artifactId>
-	<groupId>pl.piomin.services</groupId>
+	<artifactId>contract-service</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
 	</properties>
 
 	<dependencies>
