--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.0.3.RELEASE</version>
+  </parent>
+
   <groupId>pl.piomin.services</groupId>
   <artifactId>sample-spring-blockchain-contract</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+
+  <properties>
+    <java.version>11</java.version>
+    <sonar.projectKey>piomin_sample-spring-blockchain-contract</sonar.projectKey>
+    <sonar.organization>piomin</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  </properties>
+
   <modules>
   	<module>contract-service</module>
   	<module>transaction-service</module>
   </modules>
+
 </project>
