--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <sonar.projectKey>piomin_sample-spring-blockchain-contract</sonar.projectKey>
     <sonar.organization>piomin</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <testcontainers.version>1.19.6</testcontainers.version>
+    <web3j.version>5.0.0</web3j.version>
   </properties>
 
   <modules>
