--- a/transaction-service/src/main/resources/application.yml
+++ b/transaction-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 server:
   port: ${PORT:8091}
 web3j:
-  client-address: http://192.168.99.100:8545
+  client-address: http://localhost:8545
   
 contract-service:
   url: http://localhost:8090/contract/owner
