--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: Analyze on SonarCloud
-          command: mvn verify sonar:sonar -DskipTests
+          command: mvn web3j:generate-sources verify sonar:sonar -DskipTests
   test:
     executor: machine_executor_amd64
     steps:
