--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,49 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.18</version>
-  </parent>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.18</version>
+    </parent>
 
-  <groupId>pl.piomin.services</groupId>
-  <artifactId>sample-spring-blockchain-contract</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <groupId>pl.piomin.services</groupId>
+    <artifactId>sample-spring-blockchain-contract</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-  <properties>
-    <java.version>11</java.version>
-    <sonar.projectKey>piomin_sample-spring-blockchain-contract</sonar.projectKey>
-    <sonar.organization>piomin</sonar.organization>
-    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    <testcontainers.version>1.19.6</testcontainers.version>
-    <web3j.version>4.11.0</web3j.version>
-  </properties>
+    <properties>
+        <java.version>11</java.version>
+        <sonar.projectKey>piomin_sample-spring-blockchain-contract</sonar.projectKey>
+        <sonar.organization>piomin</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <testcontainers.version>1.19.6</testcontainers.version>
+        <web3j.version>4.11.0</web3j.version>
+    </properties>
 
-  <modules>
-  	<module>contract-service</module>
-  	<module>transaction-service</module>
-  </modules>
+    <modules>
+        <module>contract-service</module>
+        <module>transaction-service</module>
+    </modules>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.web3j</groupId>
+                <artifactId>web3j-maven-plugin</artifactId>
+                <version>4.11.0</version>
+                <configuration>
+                    <packageName>pl.piomin.services.contract.model</packageName>
+                    <sourceDestination>src/main/generated</sourceDestination>
+                    <soliditySourceFiles>
+                        <directory>src/main/resources</directory>
+                        <includes>
+                            <include>**/*.sol</include>
+                        </includes>
+                    </soliditySourceFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
